Fixed a spacing issue with the slider

--- a/ballstyles.css
+++ b/ballstyles.css
@@ -57,7 +57,7 @@ body{
 
 #descBox{
 	z-index:3;
-	margin-top:27%;
+	margin-top:25%;
 	margin-left:15%;
 	position:absolute;
 	width:70%;
